@startuml Entity Relationship Diagram SMKN3 BJM

Entity Presensi {
  *idpresensi
  *mapelid
  *jurusanid
  *bulanid
  *tahunid
  *semesterid
  *kelasid
  *studentid
  *date
  *keterangan
}

Entity MataPelajaran {
  *idmapel
  *namamapel
  *guruid
  *kelasid
  *jurusanid
  *tahunid
  *semesterid
}

Entity Semester {
  *idsemester
  *namasemester
}

Entity Tahun {
  *idtahun
  *namatahun
}

Entity Bulan {
  *idbulan
  *namabulan
}

Entity Guru {
  *id_guru
  *namaguru
  *nisn
  *jeniskelamin
  *alamat
  *email
  *notelp
  *tempatlahir
  *tanggallahir
}

Entity Jurusan {
  *idjurusan
  *namajurusan
}

Entity Kelas {
  *idkelas
  *tingkatkelas
  *namakelas
  *tahunangkatan
  *jurusanid
  *guruid
}

Entity Siswa {
  *idsiswa
  *namasiswa
  *jeniskelamin
  *alamat
  *email
  *notelp
  *tempatlahir
  *tanggallahir
}

Entity User {
  *id
  *email
  *username
  *fullname
  *nisn
  *user_image
  *password_hash
}

User ||--|| Guru :Sebagai
Guru ||--|{ MataPelajaran : Mengajar
MataPelajaran ||--|{ Presensi :Manghasilkan
MataPelajaran ||--|{ Kelas :Memiliki
Kelas ||--|{ Siswa :Memiliki
Kelas ||--|| Jurusan :Memiliki
Siswa ||--|| Jurusan :Memiliki
Siswa }|--|{ Presensi :Menghasilkan
MataPelajaran ||--|| Semester :Memiliki
MataPelajaran ||--|{ Tahun :Memiliki
MataPelajaran ||--|{ Bulan :Memiliki

@enduml